force-app/main/default/objects/Lease_Activity__c/Lease_Activity__c.object-meta.xml
<CustomObject>
    <description>Append-only negotiation log entry on a Lease Inquiry. Never edited or deleted.</description>
    <label>Lease Activity</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>