force-app/main/default/objects/Lease_Activity__c/fields/Ball_In_Court__c.field-meta.xml
<CustomField>
    <fullName>Ball_In_Court__c</fullName>
    <description>Who the deal was handed to as of this log entry.</description>
    <label>Ball in Court</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Landlord</fullName>
                <default>true</default>
                <label>Landlord</label>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>