force-app/main/default/objects/Lease_Activity__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>The negotiation update: counter-offer, response, or status change. Append-only.</description>
    <label>Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>