force-app/main/default/objects/Lease_Activity__c/fields/Lease_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Lease_Inquiry__c</fullName>
    <label>Lease Inquiry</label>
    <referenceTo>Lease_Inquiry__c</referenceTo>
    <relationshipLabel>Lease Activities</relationshipLabel>
    <relationshipName>Lease_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>