force-app/main/default/objects/Lease_Activity__c/fields/Logged_By__c.field-meta.xml
<CustomField>
    <fullName>Logged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Lease Activities</relationshipLabel>
    <relationshipName>Lease_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>